# CV_Final

edgeDetect/: canny.py  filter.py  gaussian_filter.py  harris.py  morph.py  sift.py
final/: first  second  test.sh
sift/: CMakeLists.txt  sift  sift.cpp
templatematch/: CMakeLists.txt  multy.py  template  template.cpp  templatematching.py
